add appsConfigs menu zh en.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">YLauncher</string>
+    <string name="take_off">Take Off</string>
+    <string name="land">Land</string>
 </resources>
