--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Y桌面</string>
+    <string name="take_off">起飞</string>
+    <string name="land">降落</string>
 </resources>
